tests/snapshots/codegen__range_types.snap
---
source: tests/codegen.rs
expression: code
---
// Code generated by sqlc-gen-sqlx v[VERSION]. DO NOT EDIT.
// sqlc version: [VERSION]

#![allow(
    dead_code,
    reason = "generated queries may expose items a caller does not use"
)]

pub trait AsExecutor {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres>;
}
impl AsExecutor for sqlx::PgPool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres> {
        &*self
    }
}
impl AsExecutor for &sqlx::PgPool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres> {
        *self
    }
}
impl AsExecutor for sqlx::PgConnection {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres> {
        &mut *self
    }
}
impl AsExecutor for sqlx::Transaction<'_, sqlx::Postgres> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres> {
        &mut **self
    }
}
impl AsExecutor for sqlx::pool::PoolConnection<sqlx::Postgres> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres> {
        &mut **self
    }
}
impl<T: AsExecutor + ?Sized> AsExecutor for &mut T {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres> {
        (**self).as_executor()
    }
}
pub const GET_EVENT_WINDOW: &str = "SELECT id, window, flags FROM events WHERE id = $1";
#[derive(Debug, Clone, sqlx::FromRow)]
pub struct GetEventWindowRow {
    pub id: i64,
    pub window: sqlx::postgres::types::PgRange<chrono::DateTime<chrono::Utc>>,
    pub flags: sqlx::types::BitVec,
}
pub async fn get_event_window<E: AsExecutor>(
    mut db: E,
    id: i64,
) -> Result<GetEventWindowRow, sqlx::Error> {
    sqlx::query_as::<_, GetEventWindowRow>(GET_EVENT_WINDOW)
        .bind(id)
        .fetch_one(db.as_executor())
        .await
}
